# my-idf-component

DFRobot_LTR308/: CMakeLists.txt  DFRobot_LTR308.cpp  README.md
DFRobot_LTR308/include/: DFRobot_LTR308.h
litter_robot_detect/: CMakeLists.txt  Kconfig  idf_component.yml  lite_model_esp32s3.espdl  litter_robot_detect_common.cpp  litter_robot_detect_ppq.cpp  litter_robot_detect_tflite.cpp  model_data.h
litter_robot_detect/include/: litter_robot_detect.hpp
